--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^3.1.4
   image_picker: ^0.8.4+4
   firebase_storage: ^10.0.6
+  date_time_picker: "^2.1.0"
   
 
 dev_dependencies:
